<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginTabFragment"
            type="com.bbexcellence.a3awenni.login.LoginTabFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                app:endIconMode="password_toggle"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_email_text_input_layout"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_password"
                    android:inputType="textWebPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:background="@drawable/button_background"
                android:onClick="@{() -> loginTabFragment.onSubmitCredentials()}"
                android:text="@string/login_button_text"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_forgot_password_text_view"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/login_forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:onClick="@{() -> loginTabFragment.openPswdResetActivity()}"
                android:text="@string/forgot_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/login_password_text_input_layout"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_password_text_input_layout"
                app:layout_constraintVertical_bias="0" />

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/loading_image_content_descrption"
                android:scaleType="centerCrop"
                android:src="@drawable/loading_animation"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>