<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.FirstScreenFragment">

    <ImageView
        android:id="@+id/screen_1_image"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screen_1_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/heading_one"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_1_image" />

    <TextView
        android:id="@+id/screen_1_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/desc_one"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_1_heading" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_1_description">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/filled_circle" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/empty_circle" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/empty_circle" />
    </LinearLayout>


    <Button
        android:id="@+id/screen_1_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/next_button"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>